--- a/index.html
+++ b/index.html
@@ -19,15 +19,28 @@
 
 <body>
 
-  <nav>
-    <ul>
-      <li>school name</li>
-      <li>Campus life</li>
-      <li>Acheievements</li>
-      <li>What's new</li>
-      <li>Contact us</li>
-    </ul>
-  </nav>
+  <nav class="navbar-inverse" style="position:sticky;top:0;z-index:99999">
+
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#">Arnav patel </a>
+    </div>
+    
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li><a href="#school name"></a></li>
+        <li><a href="#campus life"></a></li>
+        <li><a href="#achievements"></a></li>
+        <li><a href="#what's new"></a></li>
+        <li><a href="#contact us"></a></li>
+      </ul>
+    </div>
+
+</nav>
 
   <iframe  id="video"    width="1280" height="720" src="https://www.youtube.com/embed/xkh5_1VgWaM" title="Discover Bacchus Marsh Grammar" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
